--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
 
     <div id="secretModal" class="modal">
         <div class="modal-content">
-            <h3>🔐 Mensaje Secreto</h3>
+            <h3> Mensaje Super Secreto</h3>
             <p>Si deseas leer el siguiente mensaje ingresa la siguiente clave: <strong style="color: #e91e63;">999</strong></p>
             <input type="password" id="secretCode" placeholder="Ingresa la clave..." maxlength="3">
             <div class="modal-buttons">
@@ -560,12 +560,12 @@
             </div>
             <div id="secretMessageDiv" style="display: none;">
                 <div class="secret-message">
-                    💕 Julexis, desde el momento en que te conocí, mi mundo cambió por completo. 
+                    Mi Jule, desde el momento en que te conocí, mi mundo cambió por completo. 
                     Cada día a tu lado es una aventura llena de sonrisas y momentos especiales. 
                     En este día tan importante para ti, quiero que sepas que no solo celebro tu cumpleaños, 
                     sino también la suerte que tengo de tenerte en mi vida. 
                     Eres la persona más increíble que conozco, y espero poder seguir compartiendo 
-                    muchos cumpleaños más contigo. Te amo con todo mi corazón. 💖
+                    muchos cumpleaños más contigo. Te amo con todo mi corazón. 
                     <br><br>
                     Con todo mi amor,<br>
                     Leo 💕
@@ -725,3 +725,4 @@
     </script>
 </body>
 </html>
+
